change project name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
-          args: '--exclude-files example gamma_derive -- --test-threads 1'
+          args: '--exclude-files example mushin_derive -- --test-threads 1'
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1
