--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gamma = { path = "../gamma" }
-gamma_derive = { path = "../gamma_derive" }
+mushin = { path = "../mushin" }
+mushin_derive = { path = "../mushin_derive" }
 rand = "0.8"
