--- a/mushin/Cargo.toml
+++ b/mushin/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gamma"
+name = "mushin"
 version = "0.1.0"
 authors = ["Aitor Ruano <codearm@pm.me>"]
 edition = "2018"
@@ -8,6 +8,6 @@ edition = "2018"
 rand = "0.8"
 
 [dev-dependencies]
-gamma_derive = { path = "../gamma_derive" }
+mushin_derive = { path = "../mushin_derive" }
 rand_chacha = "0.3"
 approx = "0.4"
