fix README.md link

--- a/mushin/Cargo.toml
+++ b/mushin/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Compile-time creation of neural networks"
 homepage = "https://github.com/c0dearm/mushin"
 repository = "https://github.com/c0dearm/mushin"
-readme = "README.md"
+readme = "../README.md"
 keywords = ["neural", "network", "artificial", "intelligence", "AI"]
 categories = ["algorithms", "no-std", "mathematics"]
 license = "MIT/Apache-2.0"
