--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features
+          args: --all-features -- --test-threads=1
 
   lints:
     name: Lints
@@ -138,7 +138,7 @@ jobs:
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
-          args: '-- --test-threads 1'
+          args: '-- --test-threads=1'
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1
