--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mushin"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Aitor Ruano <codearm@pm.me>"]
 edition = "2021"
 description = "Computational graphs with reverse automatic differentation in the GPU"
@@ -14,6 +14,10 @@ license = "MIT/Apache-2.0"
 [badges]
 maintenance = { status = "actively-developed" }
 codecov = { repository = "c0dearm/mushin" }
+
+[features]
+default = ["nn"]
+nn = []
 
 [dependencies]
 arrayfire = "3.8"
