--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,15 +6,13 @@ jobs:
     name: Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           override: true
+      - uses: ./.github/actions/arrayfire
 
       - name: Run cargo check
         uses: actions-rs/cargo@v1
@@ -25,42 +23,14 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    env:
-      AF_VER: 3.8.0
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           override: true
-
-      - name: Cache ArrayFire
-        uses: actions/cache@v1
-        id: arrayfire
-        with:
-            path: afbin
-            key: ${{ runner.os }}-af-${{ env.AF_VER }}
-
-      - name: Download ArrayFire
-        # Only download and cache arrayfire if already not found
-        if: steps.arrayfire.outputs.cache-hit != 'true'
-        run: |
-          wget --quiet http://arrayfire.s3.amazonaws.com/${AF_VER}/ArrayFire-v${AF_VER}_Linux_x86_64.sh
-          chmod +x ./ArrayFire-v${AF_VER}_Linux_x86_64.sh
-          mkdir afbin
-          ./ArrayFire-v${AF_VER}_Linux_x86_64.sh --skip-license --exclude-subdir --prefix=./afbin
-          rm ./afbin/lib64/libcu*.so*
-          rm ./afbin/lib64/libafcuda*.so*
-          rm ./ArrayFire-v${AF_VER}_Linux_x86_64.sh
-
-      - name: Export ArrayFire paths
-        run: |
-          echo "AF_PATH=${GITHUB_WORKSPACE}/afbin" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/afbin/lib64" >> $GITHUB_ENV
+      - uses: ./.github/actions/arrayfire
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
@@ -72,16 +42,14 @@ jobs:
     name: Lints
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           override: true
           components: rustfmt, clippy
+      - uses: ./.github/actions/arrayfire
 
       - name: Run cargo fmt
         uses: actions-rs/cargo@v1
@@ -98,53 +66,22 @@ jobs:
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
-    env:
-      AF_VER: 3.8.0
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           override: true
-
-      - name: Cache ArrayFire
-        uses: actions/cache@v1
-        id: arrayfire
-        with:
-            path: afbin
-            key: ${{ runner.os }}-af-${{ env.AF_VER }}
-
-      - name: Download ArrayFire
-        # Only download and cache arrayfire if already not found
-        if: steps.arrayfire.outputs.cache-hit != 'true'
-        run: |
-          wget --quiet http://arrayfire.s3.amazonaws.com/${AF_VER}/ArrayFire-v${AF_VER}_Linux_x86_64.sh
-          chmod +x ./ArrayFire-v${AF_VER}_Linux_x86_64.sh
-          mkdir afbin
-          ./ArrayFire-v${AF_VER}_Linux_x86_64.sh --skip-license --exclude-subdir --prefix=./afbin
-          rm ./afbin/lib64/libcu*.so*
-          rm ./afbin/lib64/libafcuda*.so*
-          rm ./ArrayFire-v${AF_VER}_Linux_x86_64.sh
-
-      - name: Export ArrayFire paths
-        run: |
-          echo "AF_PATH=${GITHUB_WORKSPACE}/afbin" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/afbin/lib64" >> $GITHUB_ENV
+      - uses: ./.github/actions/arrayfire
 
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
           args: '-- --test-threads=1'
 
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v1
-
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v1
+      - uses: codecov/codecov-action@v1
+      - uses: actions/upload-artifact@v1
         with:
           name: code-coverage-report
           path: cobertura.xml
